Update and rename 2022-cse1103.html to 2022-cse1103.md

--- a/_teaching/2022-cse1103.md
+++ b/_teaching/2022-cse1103.md
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CSE 1103 Discrete Mathematics</title>
-</head>
-<body>
+---
+title: "2022 CSE 1103 Discrete Mathematics"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2022-jan-cse1103
+venue: "NSTU"
+date: 2022-03-01
+location: "Noakhali, Bangladesh"
+---
 
-<div align="center">
-	<pre>
-		<b>
-		CSE 1103 Discrete Mathematics
-		Year 01 Term 01, 2022 (Held in Feb 2023 to August 2023)
-		Bachelor of Science in Software Engineering
-		Institute of Information Technology (IIT)
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
+This is a description of a teaching experience. You can use markdown like any other post.
+
+Heading 1
+======
+
+Heading 2
+======
+
+Heading 3
+======
 
 <h2>Course Teacher</h2>
 <b>Dipok Chandra Das</b><br/>
@@ -176,5 +176,3 @@ Applications of Trees</td>
 <h2>Reference Books</h2>
 1. Discrete Mathematics and its Applications, Seventh Edition by Kenneth H. Rosen. 
 <div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
