--- a/_teaching/2022-cse-1103.md
+++ b/_teaching/2022-cse-1103.md
@@ -1,34 +1,21 @@
 ---
-title: "Teaching experience 1"
+title: "CSE 1103 Discrete Mathematics"
 collection: teaching
 type: "Undergraduate course"
-permalink: /teaching/2014-spring-teaching
-venue: "University 1, Department"
-date: 2014-01-01
-location: "City, Country"
+permalink: /teaching/2022-cse-1103
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2022-03-01
+location: "Noakhali, Bangladesh"
 ---
 
-This is a description of a fghfghghfghfh teaching experience. You can use markdown like any other post.
+This was full pledged class after COVID-19 crisis.
 
-Heading 1
+Time
 ======
-
-Heading 2
-======
-
-Heading 3
-======
-
-<h2>Course Teacher</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
-
-<h2>Time</h2>
 From Feb 2023 to August 2023
 
-<h2>Course Contents</h2>
+Course Contents
+======
 <table border="1" align="justify">
 	<tr>
 		<th>Week</th>
@@ -173,5 +160,7 @@ Applications of Trees</td>
 		</td>
 	</tr>
 </table>
-<h2>Reference Books</h2>
+
+Reference Books
+---------------
 1. Discrete Mathematics and its Applications, Seventh Edition by Kenneth H. Rosen. 
