Update and rename 2019-cse2201.html to 2019-cse-2201.md

--- a/_teaching/2019-cse-2201.md
+++ b/_teaching/2019-cse-2201.md
@@ -1,34 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CSE 2201 Operating Systems and System Programming</title>
-</head>
-<body>
+---
+title: "CSE 2201 Operating Systems and System Programming (Session 2018-19)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2019-cse-2201
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2019-06-01
+location: "Noakhali, Bangladesh"
+---
+Description is here
 
-<div align="center">
-	<pre>
-		<b>
-		CSE 2201 Operating Systems and System Programming
-		Year 02 Term 02, 2019 (Held in Jun 2019 to Dec 2019)
-		Bachelor of Science in Software Engineering
-		<a href="https://github.com/IIT-NSTU">Institute of Information Technology (IIT)</a>
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
 
-<h2>Course Teacher</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
-
-<h2>Time</h2>
+Time
+======
 From Jun 2019 to Dec 2019
 
-<h2>Course Contents</h2>
+Course Contents
+========
+
 <p>
 Introduction: What is operating system?, History of operating system,
 Operating system concepts, Operating system structure, Processes and Threads,
@@ -38,10 +26,11 @@ systems, Implementation issues File Systems, Files Directories, File system mana
 Deadlocks Resources, Detection, Recovery, Avoidance, Prevention, Virtualization and
 Cloud, System Programming: Shell Scripting
 </p>
-<h2>Reference Books:</h2>
+
+Reference Books:
+----------
 1. Operating System Concepts, 7th edition, by Silberschatz, Galvin, Gagne <br/>
 2. Modern Operating Systems, 4th edition, Tanenbum, Bos 
-</p>
 
 
 <div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
