Update and rename 2024-cse1103.html to 2024-cse-1103.md

--- a/_teaching/2024-cse-1103.md
+++ b/_teaching/2024-cse-1103.md
@@ -1,34 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CSE 1103 Discrete Mathematics</title>
-</head>
-<body>
+---
+title: "CSE 1103 Discrete Mathematics (Session 2023-24)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2024-cse-1103
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2024-10-01
+location: "Noakhali, Bangladesh"
+---
 
-<div align="center">
-	<pre>
-		<b>
-		CSE 1103 Discrete Mathematics
-		Year 01 Term 01, 2024 (Held in Oct 2024 to Present)
-		Bachelor of Science in Software Engineering
-		Institute of Information Technology (IIT)
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
-
-<h2>Course Teacher</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
-
-<h2>Time</h2>
+Time
+======
 From Oct 2024 to Present
 
-<h2>Course Contents</h2>
+Course Contents
+======
 <table border="1" align="justify">
 	<tr>
 		<th>Week</th>
@@ -173,8 +158,7 @@ Applications of Trees</td>
 		</td>
 	</tr>
 </table>
-<h2>Reference Books</h2>
+
+Reference Books:
+---
 1. Discrete Mathematics and its Applications, Seventh Edition by Kenneth H. Rosen. 
-<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
