--- a/_teaching/2020-se-3203.md
+++ b/_teaching/2020-se-3203.md
@@ -1,44 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SE 3203 Software Metrics</title>
-</head>
-<body>
+---
+title: "SE 3203 Software Metrics (Session 2019-20)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2020-se-3203
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2020-08-01
+location: "Noakhali, Bangladesh"
+---
 
-<div align="center">
-	<pre>
-		<b>
-		SE 3203 Software Metrics
-		Year 03 Term 02, 2020 (Held in Aug 2021 to Feb 2022)
-		Bachelor of Science in Software Engineering
-		<a href="https://github.com/IIT-NSTU">Institute of Information Technology (IIT)</a>
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
+Description here
 
-<h2>Course Teachers</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
-
-
-<h2>Time</h2>
+Time
+====
 From Aug 2021 to Feb 2022
 
-<h2>Course Contents</h2>
-<p>
+Course Contents
+====
+<p align="justify">
 Overview of Software Metrics, The basics of Measurement, Goal based framework for software measurement, Empirical Investigation, Measuring Internal Attributes : Size, Measuring Internal Attributes : Structure, Measuring Cost and Effort, Measuring External product attributes : Quality, Measuring Software Reliability, Object Oriented Metrics, For hands-on experiences: Students will implement different software metrics calculation related algorithms, utilize existing industry related tools for measuring software metrics and compare it with their implementations to gain concrete idea.
 </p>
-<b>References:</b><br/>
+
+Reference Books:
+---
 1. Software metrics- A Rigorous and Practical Approach, (3rd Edition) Norman Fenton, and Jones
 Bieman. <br/>
 2. Software Measurement and Estimation: A practical Approach (1st Edition) Linda M. Laird, and
 M. Carol Brennan <br/>
-
-<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
