--- a/_teaching/2021-se-4203.md
+++ b/_teaching/2021-se-4203.md
@@ -1,44 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SE 4203 Software Maintenance</title>
-</head>
-<body>
-
-<div align="center">
-	<pre>
-		<b>
-		SE 4203 Software Maintenance
-		Year 04 Term 02, 2021 (Held in Sep 2022 to Feb 2023)
-		Bachelor of Science in Software Engineering
-		<a href="https://github.com/IIT-NSTU">Institute of Information Technology (IIT)</a>
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
-
-<h2>Course Teachers</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
+---
+title: "SE 4203 Software Maintenance (Session 2021-20)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2021-se-4203
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2022-09-01
+location: "Noakhali, Bangladesh"
+---
+Description here
 
 
-<h2>Time</h2>
+
+Time
+=====
 From Sep 2022 to Feb 2023
 
-<h2>Course Contents</h2>
-<p>
+Course Contents
+=====
+<p align="justify">
 Lifecycle roadmap is presented and different types of evolution and maintenanceactivities are placed on it. Status within industry and research is mapped out. Evolution laws are discussed and analyses in different contexts (the traditional, component-based, and open-source). Pre delivery and transition maintenance models are studied and criteria for their success are identified. Impact analysis is studied. Different ways to manage customer problems are surveyed, both the critical (emergency) and non-critical ones. Retirement process model is considered. Finally, the quality attribute "maintainability" is discussed and compared to "bad smells". Techniques for evolutionary design in the small: refactoring. Techniques for large-scale evolutionary design, especially evolution of legacy systems. Architectural patterns for isolation/exposure of change.
 </p>
-<b>References:</b><br/>
+
+Reference Books:
+---
 1. Effective Software Maintenance and Evolution: A Reuse-Based Approach by Stanislaw
 Jarzabek; Publisher Taylor & Francis <br/>
 2. Software Maintenance: Concepts and Practice By Penny Grubb, Armstrong A. Takang 2nd
 edition World Scientific USA. <br/>
-
-<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
