Update and rename 2023-cse2101.html to 2023-cse-2101.md

--- a/_teaching/2023-cse-2101.md
+++ b/_teaching/2023-cse-2101.md
@@ -1,42 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CSE 2101 Algorithm Analysis</title>
-</head>
-<body>
+---
+title: "CSE 2101 Algorithm Analysis (Session 2023-24)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2023-cse-2101
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2024-03-01
+location: "Noakhali, Bangladesh"
+---
 
-<div align="center">
-	<pre>
-		<b>
-		CSE 2101 Algorithm Analysis
-		Year 02 Term 01, 2023 (Held in Mar 2024 to Oct 2024)
-		Bachelor of Science in Software Engineering
-		<a href="https://github.com/IIT-NSTU">Institute of Information Technology (IIT)</a>
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
 
-<h2>Course Teachers</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
-
-<h2>Time</h2>
+Time
+====
 From Mar 2024 to Oct 2024
 
-<h2>Course Contents</h2>
-<p>
+Course Contents
+====
+<p align="justify">
 Introduction - Algorithms, Analyzing & Designing Algorithms, Correctness ofAlgorithms; Greedy Algorithms - Introduction to Greedy Algorithms, Greedy Choice Property, Greedy vs. Dynamic Programming, Fractional Knapsack Problem, Activity Selection Problem, Huffman Encoding, Task Scheduling Problem, Coin Changing Problem, Kruskal’s and Prim’s Minimum Spanning Tree Algorithms; Divide and Conquer Algorithms - Introduction to Divide and Conquer Design Technique, Quick Sort, Merge Sort, Proof of Correctness, and Run Time Analysis; Dynamic Programming - Introduction to Dynamic Programming Technique, Principle of Optimality, Optimal Substructure Property, Assembly Line Scheduling, Matrix Chain Multiplication, LCS, Viterbi Algorithm, Bitonic Euclidean Traveling Salesperson Problem and Runtime Analysis; Graph Searching and Shortest Path Problems - Breadth First Search, Depth First Search, Flow Networks, Single Source and All Pair Shortest Path Algorithms; Linear Programming -Overview of Linear Programming, Formulating Problem as Linear Programs, Simplex Algorithm and Integer Linear Programming; Selected Topics - Computational Geometry, Number Theoretic and String Matching Algorithms; NP Completeness and Approximation Algorithms - NP Completeness, Polynomial Time Verification, NP Completeness and Reducibility, NP Complete Problems and Approximation Algorithms.
 </p>
-<b>References:</b><br/>
+
+Reference Books:
+-----
 1. Thomas Corman, Introduction to Algorithms, Stein Pub MIT Press, 3rd Ed. <br/>
 2. Alfred V. Aho, John E. Hopcroft, Jeffrey D. Ullman, The Design and Analysis of
 ComputerAlgorithms, Addison Wesley Series, 1974 Ed. <br/>
-
-<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
