--- a/_teaching/2023-se-3109.md
+++ b/_teaching/2023-se-3109.md
@@ -1,41 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SE 3109 Design Pattern</title>
-</head>
-<body>
+---
+title: "SE 3109 Design Pattern (Session 2022-23)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2019-cse-2103
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2024-03-01
+location: "Noakhali, Bangladesh"
+---
+Description here
 
-<div align="center">
-	<pre>
-		<b>
-		SE 3109 Design Pattern
-		Year 03 Term 01, 2023 (Held in Mar 2024 to Oct 2024)
-		Bachelor of Science in Software Engineering
-		<a href="https://github.com/IIT-NSTU">Institute of Information Technology (IIT)</a>
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
 
-<h2>Course Teachers</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
-
-<h2>Time</h2>
+Time
+======
 From Mar 2024 to Oct 2024
 
-<h2>Course Contents</h2>
-<p>
+Course Contents
+====
+<p align="justify">
 Revision of Concepts of OOP, Importance of learning design patterns, Types of Design Patterns - Structural, Behavioral and Creational Patterns, Creational Patterns – Singleton, Factory, Factory Method, Abstract Factory, Builder, Prototype and Object Pool, Behavioral Patterns - Chain of Responsibility, Command, Interpreter, Iterator, Mediator, Memento, Observer, Strategy, Template Method, Visitor and Null Object, Structural Patterns – Adapter, Bridge, Composite, Decorator, Flyweight and Proxy, REFACTORING CODE SMELL, Different type of code smells - Inappropriate Naming, Comments, Dead Code, Duplicated code, Primitive Obsession, Large Class, Lazy Class, Alternative Class with Different Interface, Long Method, Long Parameter List, Switch Statements, Speculative Generality, Oddball Solution, Feature Envy, Refused Bequest, Black Sheep and Train Wreck, Design Principles (SOLID) - Single responsibility principle, Open Close Principle, Liskov substitution principle, Interface segregation principle, Dependency Inversion principle.
 </p>
-<b>References:</b><br/>
+
+Reference Books:
+------
 1. Gamma, Erich. Design patterns: elements of reusable object-oriented software.
 Pearson Education, 1995. <br/>
-
-<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
