--- a/_teaching/2021-cse-1103.md
+++ b/_teaching/2021-cse-1103.md
@@ -1,34 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>CSE 1103 Discrete Mathematics</title>
-</head>
-<body>
+---
+title: "CSE 1103 Discrete Mathematics (Session 2020-21)"
+collection: teaching
+type: "Undergraduate course"
+permalink: /teaching/2021-cse-1103
+venue: "Noakhali Science and Technology University, Institute of Information Technology"
+date: 2022-02-01
+location: "Noakhali, Bangladesh"
+---
 
-<div align="center">
-	<pre>
-		<b>
-		CSE 1103 Discrete Mathematics
-		Year 01 Term 01, 2021 (Held in Feb 2022 to Sep 2022)
-		Bachelor of Science in Software Engineering
-		Institute of Information Technology (IIT)
-		<a href="https://nstu.edu.bd/">Noakhali Science and Technology University (NSTU)</a>
-		</b>
-	</pre>
-</div>
+Description here
 
-<h2>Course Teacher</h2>
-<b>Dipok Chandra Das</b><br/>
-Assistant Professor<br/>
-IIT, NSTU<br/>
-dipok.iit@nstu.edu.bd<br/>
 
-<h2>Time</h2>
+Time
+====
 From Feb 2022 to Sep 2022
 
-<h2>Course Contents</h2>
+Course Contents
+======
 <table border="1" align="justify">
 	<tr>
 		<th>Week</th>
@@ -174,9 +162,6 @@ Applications of Trees</td>
 	</tr>
 </table>
 
-<h2>Reference Books</h2>
+Reference Books:
+-----
 1. Discrete Mathematics and its Applications, Seventh Edition by Kenneth H. Rosen. 
-
-<div align="center"> &copy; <a href="https://github.com/cd-dpk">cd-dpk</a></div>
-</body>
-</html>
